# paramview

./: .eslintrc.json  .gitignore  CHANGELOG.md  CITATION.cff  Makefile  README.md  cypress.config.mjs  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/actions/set-up-backend/: action.yml
.github/actions/set-up-frontend/: action.yml
.github/workflows/: ci.yml  github-pages.yml  publish.yml
cypress/: backend.py  tsconfig.json
cypress/e2e/: commit-dialog.cy.ts  commit-selection.cy.ts  error.cy.ts  loading.cy.ts  parameter-navigation.cy.ts
frontend/: .eslintignore  .eslintrc.json  .prettierignore  cypress.config.mjs  index.html  jest.config.ts  package.json  setup-tests.ts  setupTests.ts  test-utils.tsx  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/coverage/lcov-report/: index.html
frontend/coverage/lcov-report/frontend/: index.html  test-utils.tsx.html
frontend/cypress/: backend.py  global.d.ts  tsconfig.json
frontend/cypress/e2e/: commit-dialog.cy.ts  commit-selection.cy.ts  error-page.cy.ts  error.cy.ts  loading.cy.ts  main-page.cy.ts  parameter-editing.cy.ts  parameter-navigation.cy.ts  spec.cy.ts  title.cy.ts
frontend/cypress/support/: commands.ts  e2e.ts
frontend/public/: index.html
frontend/src/: constants.ts  index.tsx  main.tsx  theme.ts  types.ts
frontend/src/atoms/: api.test.ts  api.ts  commitSelect.ts  paramList.ts
frontend/src/components/: App.tsx  index.ts
frontend/src/components/App/: App.tsx  Error.tsx  ErrorAlert.test.tsx  ErrorAlert.tsx  ErrorFallback.tsx  SocketIO.test.tsx  SocketIO.tsx  useBeforeUnload.ts  useSocketIO.ts
frontend/src/components/Header/: CommitSelect.test.tsx  CommitSelect.tsx  CommitSelectList.tsx  Header.test.tsx  Header.tsx
frontend/src/components/ParamList/: CollapseButton.tsx  GroupItemContent.tsx  LeafItemContent.tsx  ParamCollapse.tsx  ParamItemContent.tsx  ParamList.tsx  index.ts
frontend/src/utils/: api.test.ts  api.ts  data.test.ts  data.ts  dataDiff.test.ts  dataDiff.ts  requestData.ts  timestamp.test.ts  timestamp.ts  type.test.ts  type.ts
paramview/: __init__.py  _api.py  _app.py  _cli.py  _db.py  _server.py  _watch_db.py
src/: types.ts
src/atoms/: api.ts  commitSelect.ts  paramList.ts
src/components/App/: App.tsx  useSocketIO.ts
src/components/Header/: CommitSelect.tsx  CommitSelectList.tsx  Header.tsx
src/components/ParamSection/: GroupItemContent.tsx  ItemContent.tsx  LeafItemContent.tsx  ParamControls.tsx  ParamList.tsx  ParamSection.tsx
src/utils/: api.test.ts  data.test.ts  data.ts  dataDiff.test.ts  dataDiff.ts  timestamp.test.ts  timestamp.ts  type.test.ts  type.ts
tests/: conftest.py  test_api.py  test_app.py  test_cli.py  test_watch_db.py
tests/e2e/: conftest.py  helpers.py  start_server.py  test_commit_dialog.py  test_commit_selection.py  test_database_name.py  test_error.py  test_page_title.py  test_parameter_editing.py  test_parameter_navigation.py  test_parameter_viewing.py
tests/unit/: conftest.py  test_api.py  test_app.py  test_cli.py  test_watch_db.py
(+45 files in other folders)
