[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "paramview"
version = "0.4.0"
description = "GUI for viewing the contents of a ParamDB database."
authors = ["Alex Hadley <contact@alexhadley.net>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/PainterQubits/paramview"
include = ["paramview/static/**/*"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
flask-socketio = "^5.3.6"
eventlet = "^0.34.2"
watchdog = "^3.0.0"
paramdb = "^0.10.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
flake8 = "^6.1.0"
pylint = "^3.0.3"
black = "^23.12.1"
pytest = "^7.4.4"
pytest-playwright = "^0.4.3"
freezegun = "^1.4.0"
sqlalchemy = "^2.0.25"
astropy = "^6.0.0"

[tool.poetry.scripts]
paramview = "paramview._cli:main"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--tracing=retain-on-failure"]
base_url = "http://127.0.0.1:5051"
