[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "paramview"
version = "0.4.1"
description = "GUI for viewing the contents of a ParamDB database."
authors = ["Alex Hadley <contact@alexhadley.net>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/PainterQubits/paramview"
include = ["paramview/static/**/*"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.2"
flask-socketio = "^5.3.6"
eventlet = ">=0.35.1,<0.37.0"
watchdog = "^4.0.0"
paramdb = "^0.11.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
flake8 = "^7.0.0"
pylint = "^3.0.3"
black = "^24.1.1"
pytest = "^8.0.0"
playwright = "^1.41.2"
pytest-playwright = "^0.4.4"
freezegun = "^1.4.0"
sqlalchemy = "^2.0.26"
astropy = "^6.0.0"

[tool.poetry.scripts]
paramview = "paramview._cli:main"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--tracing=retain-on-failure"]
base_url = "http://127.0.0.1:5051"
